@@ -54,10 +54,13 @@ std::pair<bool, bool> getBestIndexHandlesForFilterCondition(
 /// @brief Gets the best fitting index for an AQL condition.
 /// note: the caller must have read-locked the underlying collection when
 /// calling this method
-bool getBestIndexHandleForFilterCondition(
-aql::Collection const& collection, arangodb::aql::AstNode*& node,
-arangodb::aql::Variable const* reference, size_t itemsInCollection,
-aql::IndexHint const& hint, std::shared_ptr<Index>& usedIndex);
+bool getBestIndexHandleForFilterCondition(aql::Collection const& collection,
+                                          arangodb::aql::AstNode*& node,
+                                          arangodb::aql::Variable const* reference,
+                                          size_t itemsInCollection,
+                                          aql::IndexHint const& hint,
+                                          std::shared_ptr<Index>& usedIndex,
+                                          bool onlyEdgeIndexes = false);
 
 /// @brief Gets the best fitting index for an AQL sort condition
 /// note: the caller must have read-locked the underlying collection when
