@@ -699,16 +699,22 @@ void TraversalNode::prepareOptions() {
     }
   }
 
+
   TraverserOptions* opts = this->TraversalNode::options();
   TRI_ASSERT(opts != nullptr);
+  /*
+   * HACK: DO NOT use other indexes for smart BFS. Otherwise this will produce
+   * wrong results.
+   */
+  bool onlyEdgeIndexes = this->isSmart() && opts->useBreadthFirst;
   for (auto& it : _edgeConditions) {
     uint64_t depth = it.first;
     // We probably have to adopt minDepth. We cannot fulfill a condition of
     // larger depth anyway
     auto& builder = it.second;
 
-    for (auto& it : _globalEdgeConditions) {
-      builder->addConditionPart(it);
+    for (auto& it2 : _globalEdgeConditions) {
+      builder->addConditionPart(it2);
     }
 
     for (size_t i = 0; i < numEdgeColls; ++i) {
@@ -718,11 +724,11 @@ void TraversalNode::prepareOptions() {
       switch (dir) {
         case TRI_EDGE_IN:
           opts->addDepthLookupInfo(_plan, _edgeColls[i]->name(), StaticStrings::ToString,
-                                   builder->getInboundCondition()->clone(ast), depth);
+                                   builder->getInboundCondition()->clone(ast), depth, onlyEdgeIndexes);
           break;
         case TRI_EDGE_OUT:
           opts->addDepthLookupInfo(_plan, _edgeColls[i]->name(), StaticStrings::FromString,
-                                   builder->getOutboundCondition()->clone(ast), depth);
+                                   builder->getOutboundCondition()->clone(ast), depth, onlyEdgeIndexes);
           break;
         case TRI_EDGE_ANY:
           TRI_ASSERT(false);
